backend/challenges/k8s/k8s-10-firewall-rules-between-order-and-payment/solution/payment-handler-netpol-l10.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-handler-allow-orders
spec:
  podSelector:
    matchLabels:
      app: payment-handler
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: order-processor
      ports:
        - protocol: TCP
          port: 8000
